Add initial HTML structure, update package dependencies, and enhance main entry point with StrictMode

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/spirinity/Futuricty#readme",
   "description": "",
   "dependencies": {
+    "maplibre-gl": "^5.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
