--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Gemini API Configuration
 # Get your API key from: https://aistudio.google.com/app/apikey
+
+# For local development (Vite uses this)
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# For Vercel deployment, add this as GEMINI_API_KEY (without VITE_ prefix)
-# GEMINI_API_KEY=your_gemini_api_key_here
+# For Vercel Edge Functions (both local and production)
+GEMINI_API_KEY=your_gemini_api_key_here
